--- a/HTML/cart-form.html
+++ b/HTML/cart-form.html
@@ -264,8 +264,8 @@
                             </i>
                         </a>
                         <ul class="drop-list-item list-unstyled">
-                            <li><a href="">Đã mua</a></li>
-                            <li><a href="">Hàng chờ</a></li>
+                            <li><a href="#">Đã mua</a></li>
+                            <li><a href="../HTML/cart-form.html">Hàng chờ</a></li>
                         </ul>
                         <h4>Giỏ hàng</h4>
                     </div>
@@ -274,10 +274,10 @@
                         <i class="ti-user"></i>
                         <h4>Tài khoản</h4>
                         <ul class="drop-list-item list-unstyled">
-                            <li><a href=""><i class="ti-settings"
-                                        style="font-size: 18px;top: 5;"></i>&nbsp;&nbsp;&nbsp;Cài đặt thông tin</li></a>
-                            <li><a href="../HTML/formSignLog.html"><i class="fa fa-sign-out"
-                                        style="font-size: 18px;top:52;"></i>&nbsp;&nbsp;&nbsp;Đăng xuất</li></a>
+                            <li><a href="#"><i class="ti-settings"
+                                        style="font-size: 18px;margin-top: 0px;"></i>&nbsp;&nbsp;&nbsp;Cài đặt thông tin</a></li>
+                            <li><a href="../HTML/formSignLog.html"><i class="fa fa-sign-in"
+                                        style="font-size: 18px;margin-top: 0px;"></i>&nbsp;&nbsp;&nbsp;Đăng nhập</a></li>
                         </ul>
                     </div>
                 </div>
@@ -458,11 +458,11 @@
                                 <div class="top-selling">
                                     <h4 class="text-left">Bán chạy nhất</h4>
                                     <div class="img-top-sell">
-                                        <a href=""><img src="../Assets/images/header/iphone14-pro-best-selling.jpg"
+                                        <a href="../HTML/detailsProduct.html"><img src="../Assets/images/header/iphone14-pro-best-selling.jpg"
                                                 alt=""></a>
                                     </div>
                                     <div class="descript-top-sell">
-                                        <a href="">iPhone 14 Pro Max
+                                        <a href="../HTML/detailsProduct.html">iPhone 14 Pro Max
                                             128GB</a>
                                         <p>27.190.000 <span style="text-decoration: underline;">đ</span></p>
                                     </div>
@@ -698,20 +698,20 @@
                                 ty</a>
                         </li>
                         <li>
-                            <a href="//fptshop.com.vn/ho-tro/chinh-sach-bao-mat" title="">Chính sách bảo mật</a>
+                            <a href="https://fptshop.com.vn/ho-tro/chinh-sach-bao-mat" title="">Chính sách bảo mật</a>
                         </li>
                         <li>
-                            <a href="//fptshop.com.vn/tos" title="">Quy chế hoạt động</a>
+                            <a href="https://fptshop.com.vn/tos" title="">Quy chế hoạt động</a>
                         </li>
                         <li>
                             <a href="http://hddt.fptshop.com.vn/" title="">Kiểm tra hóa đơn điện tử</a>
                         </li>
                         <li>
-                            <a href="//fptshop.com.vn/kiem-tra-bao-hanh?tab=thong-tin-bao-hanh" title="">Tra cứu
+                            <a href="https://fptshop.com.vn/kiem-tra-bao-hanh?tab=thong-tin-bao-hanh" title="">Tra cứu
                                 thông tin bảo hành</a>
                         </li>
                         <li>
-                            <a href="//fptshop.com.vn/ho-tro/cau-hoi-thuong-gap" title="Câu hỏi thường gặp mua hàng">Câu
+                            <a href="https://fptshop.com.vn/ho-tro/cau-hoi-thuong-gap" title="Câu hỏi thường gặp mua hàng">Câu
                                 hỏi thường gặp mua hàng</a>
                         </li>
                     </ul>
@@ -726,15 +726,15 @@
                 </div>
                 <div class="col-md-2 col-sm-6 text-left">
                     <ul class="ft-list">
-                        <li><a href="//vieclam.fptshop.com.vn/">Tin tuyển dụng</a></li>
+                        <li><a href="https://vieclam.fptshop.com.vn/">Tin tuyển dụng</a></li>
                         <li>
-                            <a href="//fptshop.com.vn/tin-tuc/Tin-khuyen-mai" title="">Tin khuyến mãi</a>
+                            <a href="https://fptshop.com.vn/tin-tuc/Tin-khuyen-mai" title="">Tin khuyến mãi</a>
                         </li>
                         <li>
-                            <a href="//fptshop.com.vn/ho-tro/huong-dan-mua-hang" title="">Hướng dẫn mua online</a>
+                            <a href="https://fptshop.com.vn/ho-tro/huong-dan-mua-hang" title="">Hướng dẫn mua online</a>
                         </li>
                         <li>
-                            <a href="//fptshop.com.vn/tra-gop" title="">Hướng dẫn mua trả góp</a>
+                            <a href="https://fptshop.com.vn/tra-gop" title="">Hướng dẫn mua trả góp</a>
                         </li>
                         <li>
                             <a href="https://fptshop.com.vn/ho-tro/chinh-sach-tra-gop" title="">Chính sách trả
@@ -759,16 +759,16 @@
                 </div>
                 <div class="col-md-2 col-sm-6">
                     <ul class="ft-list">
-                        <li><a href="//fptshop.com.vn/cua-hang">Hệ thống cửa hàng</a></li>
+                        <li><a href="https://fptshop.com.vn/cua-hang">Hệ thống cửa hàng</a></li>
                         <li>
                             <a href="https://fptshop.com.vn/ho-tro/chinh-sach-doi-san-pham" title="">Chính sách đổi
                                 trả</a>
                         </li>
                         <li>
-                            <a href="//fptshop.com.vn/ho-tro/chinh-sach-bao-hanh" title="">Hệ thống bảo hành</a>
+                            <a href="https://fptshop.com.vn/ho-tro/chinh-sach-bao-hanh" title="">Hệ thống bảo hành</a>
                         </li>
                         <li>
-                            <a href="//fptshop.com.vn/ho-tro/gioi-thieu-may-doi-tra" title="">Giới thiệu máy đổi
+                            <a href="https://fptshop.com.vn/ho-tro/gioi-thieu-may-doi-tra" title="">Giới thiệu máy đổi
                                 trả</a>
                         </li>
 
