--- a/HTML/formSignLog.html
+++ b/HTML/formSignLog.html
@@ -246,7 +246,6 @@ Login - Register - ForgotPass Table -->
                         <li><a href="https://fptshop.com.vn/gioi-thieu">Thông tin doanh nghiệp</a></li>
                         <li><a href="#" onclick="contactF()" class="contact-header">Liên hệ</a></li>
                         <li><a href="#" class="service-header">Dịch Vụ</a></li>
-                        <li><a href="#"  class="login-header" onclick="loginF()">Đăng nhập</a></li>
                     </ul>
                 </div>
                 <div class="cus-abate" title="Phương thức thanh toán">
@@ -261,7 +260,7 @@ Login - Register - ForgotPass Table -->
                     </a>
                     <ul class="drop-list-item list-unstyled">
                         <li><a href="#">Đã mua</a></li>
-                        <li><a href="#">Hàng chờ</a></li>
+                        <li><a href="../HTML/cart-form.html">Hàng chờ</a></li>
                     </ul>
                     <h4>Giỏ hàng</h4>
                 </div>
@@ -271,9 +270,9 @@ Login - Register - ForgotPass Table -->
                     <h4>Tài khoản</h4>
                     <ul class="drop-list-item list-unstyled">
                         <li><a href="#"><i class="ti-settings"
-                                    style="font-size: 18px;top: 5;"></i>&nbsp;&nbsp;&nbsp;Cài đặt thông tin</a></li>
-                        <li><a href="../HTML/formSignLog.html"><i class="fa fa-sign-out"
-                                    style="font-size: 18px;top:52;"></i>&nbsp;&nbsp;&nbsp;Đăng xuất</a></li>
+                                    style="font-size: 18px;margin-top: 0px;"></i>&nbsp;&nbsp;&nbsp;Cài đặt thông tin</a></li>
+                        <li><a href="../HTML/formSignLog.html"><i class="fa fa-sign-in"
+                                    style="font-size: 18px;margin-top: 0px;"></i>&nbsp;&nbsp;&nbsp;Đăng nhập</a></li>
                     </ul>
                 </div>
             </div>
@@ -454,11 +453,11 @@ Login - Register - ForgotPass Table -->
                             <div class="top-selling">
                                 <h4 class="text-left">Bán chạy nhất</h4>
                                 <div class="img-top-sell">
-                                    <a href="#"><img src="../Assets/images/header/iphone14-pro-best-selling.jpg"
+                                    <a href="../HTML/detailsProduct.html" onclick="sessionData()"><img src="../Assets/images/header/iphone14-pro-best-selling.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="descript-top-sell">
-                                    <a href="#">iPhone 14 Pro Max
+                                    <a href="../HTML/detailsProduct.html" onclick="sessionData()">iPhone 14 Pro Max
                                         128GB</a>
                                     <p>27.190.000 <span style="text-decoration: underline;">đ</span></p>
                                 </div>
